--- a/package.json
+++ b/package.json
@@ -1,26 +1,37 @@
 {
-  "name": "hotelservidor",
-  "version": "1.0.0",
-  "description": "Steps to run this project:",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Luis Torres",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "class-validator": "^0.13.1",
-    "cors": "^2.8.5",
-    "jsonwebtoken": "^8.5.1"
-  },
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/luisTorres14/Hotel-servidor.git"
-  },
-  "bugs": {
-    "url": "https://github.com/luisTorres14/Hotel-servidor/issues"
-  },
-  "homepage": "https://github.com/luisTorres14/Hotel-servidor#readme"
+    "name": "hotelservidor",
+    "version": "1.0.0",
+    "description": "Steps to run this project:",
+    "main": "index.js",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "class-validator": "^0.13.1",
+        "cors": "^2.8.5",
+        "dotenv": "^9.0.2",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.12.10",
+        "mysql": "^2.18.1",
+        "reflect-metadata": "^0.1.13",
+        "ts-node": "^9.1.1",
+        "ts-node-dev": "^1.1.6",
+        "typeorm": "^0.2.32",
+        "typescript": "^4.2.4"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.7"
+    },
+    "scripts": {
+        "dev": "nodemon ."
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/luisTorres14/Hotel-servidor.git"
+    },
+    "author": "Luis Torres",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/luisTorres14/Hotel-servidor/issues"
+    },
+    "homepage": "https://github.com/luisTorres14/Hotel-servidor#readme"
 }
